x/programs/rust/sdk-macros/tests/ui/fail/conflicting-type-state-schema.rs
use wasmlanche_sdk::state_schema;

struct Key;

state_schema! {
    Key => u8,
}

fn main() {}
