x/programs/rust/sdk-macros/tests/ui/fail/conflicting-type-state-schema.stderr
error[E0428]: the name `Key` is defined multiple times
 --> tests/ui/fail/conflicting-type-state-schema.rs:8:1
  |
3 | struct Key;
  | ----------- previous definition of the type `Key` here
4 |
5 | state_schema! {
  | ^^^^^^^^^^^^^ `Key` redefined here
  |
  = note: `Key` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `state_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
